--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -5,6 +5,11 @@ server.port=8082
 # Note: Users must create a mysql db that they will reference here, create a user that has access to it on localhost
 #       and provide the credentials below to access it
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/critterdb?serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=pass963
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
 # uncomment the below lines to view sql output in console
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
