--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -9,7 +9,9 @@ server.port=8082
 spring.datasource.username=admin
 spring.datasource.password=pass963
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # uncomment the below lines to view sql output in console
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
