--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -4,10 +4,12 @@ server.port=8082
 # Data Source Setup
 # Note: Users must create a mysql db that they will reference here, create a user that has access to it on localhost
 #       and provide the credentials below to access it
+#?serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/critterdb
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/critterdb?serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=pass963
+spring.datasource.username=root
+spring.datasource.password=C0conut$y0!!
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
